--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
-up-python==0.1.2-dev
-vsomeip_py @git+https://github.com/COVESA/vsomeip_py.git@16f3e4c
+vsomeip_py @git+https://github.com/neelam-kushwah/vsomeip_py.git@832d060235663f9d56efc8cd65a313379326cec8
+up-python==0.2.0.dev0
